# solana-sandbox

./: .gitignore  README.md
playground/: docker-compose.yml
playground/frontend/: .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml
playground/frontend/app/: layout.tsx  page.tsx
playground/frontend/components/: RustEditor.tsx  SnippetsDrawer.tsx
playground/frontend/components/ui/: toggle-group.tsx
playground/frontend/public/code/create-mint/: rust.txt  typescript.txt
playground/frontend/public/code/create-token-account/: rust.txt  typescript.txt
playground/frontend/public/code/mint-tokens/: rust.txt  typescript.txt
playground/frontend/public/code/transfer-tokens/: rust.txt  typescript.txt
playground/frontend/utils/: codeSnippets.ts
playground/server/: .gitignore  Cargo.toml  Dockerfile  README.md
playground/server/src/: main.rs
playground/server/template-rs/: Cargo.toml
playground/server/template-rs/src/: main.rs
playground/server/template-ts/: .gitignore  package.json
playground/server/template-ts/src/: index.ts
