[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
tempfile = "3.8.1"
uuid = { version = "1.6.1", features = ["v4"] }
thiserror = "1.0.50"
chrono = "0.4.31"
