[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies for program development
solana-client = "2.2.0"
solana-sdk = "2.2.0"
spl-token-client = "0.14.0"
spl-token-2022 = "7.0.0"
spl-associated-token-account = "6.0.0"

tokio = { version = "1.44.0", features = ["full"] }
anyhow = "1.0.95"